[package]
name = "minigun"
version = "1.7.12"
authors = ["lkadalski <kadalski.lukasz@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Multipurpose CLI HTTP load testing tool"
repository = "https://github.com/lkadalski/minigun"
homepage = "https://github.com/lkadalski/minigun"
keywords = ["terminal","cli","http","load-testing"]
categories = ["command-line-interface","command-line-utilities", "http", "load-testing"]
readme = "README.md"

[dependencies]
structopt = "0.3.25"
futures = "0.3.24"
comfy-table = "6.0.0"
itertools = "0.10.1"
log = "0.4.17"
femme = "2.2.1"
serde_json = "1.0.85"
ron = "0.7.1"
serde = { version = "1.0.144", features = ["derive"] }
http-client = "6.5.2"
indicatif = "0.16.2"
anyhow = "1.0.63"
mockito = "0.31.0"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies.surf]
version = "2.3.1"
features = ["h1-client", "hyper-client", "wasm-client"]

[dev-dependencies]
assert_cmd = "2.0.4"
wiremock = "0.5.14"
predicates = "2.0.3"
